src/Poly/Poly_Triangulation.hxx
@@ -97,7 +97,7 @@ public:
   Standard_EXPORT Poly_Triangulation (const Handle(Poly_Triangulation)& theTriangulation);
 
   //! Returns the deflection of this triangulation.
-  Standard_EXPORT Standard_Real Deflection() const;
+  Standard_Real Deflection() const { return myDeflection; }
 
   //! Sets the deflection of this triangulation to theDeflection.
   //! See more on deflection in Polygon2D
@@ -107,23 +107,23 @@ public:
   Standard_EXPORT void RemoveUVNodes();
 
   //! Returns the number of nodes for this triangulation.
-  Standard_Integer NbNodes() const { return myNbNodes; }
+  Standard_Integer NbNodes() const { return myNodes.Length(); }
 
   //! Returns the number of triangles for this triangulation.
-  Standard_Integer NbTriangles() const { return myNbTriangles; }
+  Standard_Integer NbTriangles() const { return myTriangles.Length(); }
 
   //! Returns Standard_True if 2D nodes are associated with 3D nodes for this triangulation.
   Standard_Boolean HasUVNodes() const { return !myUVNodes.IsNull(); }
 
   //! Returns the table of 3D nodes (3D points) for this triangulation.
-  Standard_EXPORT const TColgp_Array1OfPnt& Nodes() const;
+  const TColgp_Array1OfPnt& Nodes() const { return myNodes; }
 
   //! Returns the table of 3D nodes (3D points) for this triangulation.
   //! The returned array is
   //! shared. Therefore if the table is selected by reference, you
   //! can, by simply modifying it, directly modify the data
   //! structure of this triangulation.
-  Standard_EXPORT TColgp_Array1OfPnt& ChangeNodes();
+  TColgp_Array1OfPnt& ChangeNodes() { return myNodes; }
 
   //! Returns node at the given index.
   //! Raises Standard_OutOfRange exception if theIndex is less than 1 or greater than NbNodes.
@@ -138,7 +138,7 @@ public:
   //! The function HasUVNodes  checks if 2D nodes
   //! are associated with the 3D nodes of this triangulation.
   //! Const reference on the 2d nodes values.
-  Standard_EXPORT const TColgp_Array1OfPnt2d& UVNodes() const;
+  const TColgp_Array1OfPnt2d& UVNodes() const { return myUVNodes->Array1(); }
 
   //! Returns the table of 2D nodes (2D points) associated with
   //! each 3D node of this triangulation.
@@ -146,7 +146,7 @@ public:
   //! Therefore if the table is selected by reference,
   //! you can, by simply modifying it, directly modify the data
   //! structure of this triangulation.
-  Standard_EXPORT TColgp_Array1OfPnt2d& ChangeUVNodes();
+  TColgp_Array1OfPnt2d& ChangeUVNodes() { return myUVNodes->ChangeArray1(); }
 
   //! Returns UVNode at the given index.
   //! Raises Standard_OutOfRange exception if theIndex is less than 1 or greater than NbNodes.
@@ -157,14 +157,14 @@ public:
   Standard_EXPORT gp_Pnt2d& ChangeUVNode (const Standard_Integer theIndex);
 
   //! Returns the table of triangles for this triangulation.
-  Standard_EXPORT const Poly_Array1OfTriangle& Triangles() const;
+  const Poly_Array1OfTriangle& Triangles() const { return myTriangles; }
 
   //! Returns the table of triangles for this triangulation.
   //! Function ChangeUVNodes shares  the returned array.
   //! Therefore if the table is selected by reference,
   //! you can, by simply modifying it, directly modify the data
   //! structure of this triangulation.
-  Standard_EXPORT Poly_Array1OfTriangle& ChangeTriangles();
+  Poly_Array1OfTriangle& ChangeTriangles() { return myTriangles; }
 
   //! Returns triangle at the given index.
   //! Raises Standard_OutOfRange exception if theIndex is less than 1 or greater than NbTriangles.
@@ -199,8 +199,6 @@ public:
 protected:
 
   Standard_Real                      myDeflection;
-  Standard_Integer                   myNbNodes;
-  Standard_Integer                   myNbTriangles;
   TColgp_Array1OfPnt                 myNodes;
   Handle(TColgp_HArray1OfPnt2d)      myUVNodes;
   Poly_Array1OfTriangle              myTriangles;
